<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingStart="110dp"
    android:paddingEnd="10dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:width="200dp"
        android:text="@string/monday"
        android:onClick="openSchedule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:width="200dp"
        android:text="@string/tuesday"
        android:onClick="openSchedule"
        app:layout_constraintTop_toBottomOf="@+id/monday"></Button>

    <Button
        android:id="@+id/wedn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/wedn"
        android:onClick="openSchedule"
        app:layout_constraintTop_toBottomOf="@+id/tuesday"></Button>

    <Button
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="center"
        android:text="@string/thursday"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="openSchedule"
        app:layout_constraintTop_toBottomOf="@+id/wedn"></Button>

    <Button
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:gravity="center"
        android:text="@string/friday"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="openSchedule"
        app:layout_constraintTop_toBottomOf="@+id/thursday"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>